--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<DOCTYPE! html>
+  <html>
+    <head></head>
+    <body>
+      <p>Ayo coli!</p>
+      <p>Gerakkan semangat coli</p>
+    </body>
+  </html>
